# obsidian-hardened-mcp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE-CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  config-reference.md  m6-implementation-brief.md  m7-implementation-brief.md  security-model.md  v0.1-followups.md
docs/internal/: README.md  m6-implementation-brief.md  m7-implementation-brief.md  vault-refresh-v2-test-plan.md
docs/superpowers/plans/: 2026-05-07-manage-tags.md  2026-05-07-read-multiple-notes.md  2026-05-08-m6-11-elicit.md
docs/superpowers/specs/: 2026-05-07-manage-tags-design.md  2026-05-07-read-multiple-notes-design.md  2026-05-08-m6-11-elicit-design.md
integrations/harnesses/hermes/: README.md
integrations/refresh-executor/: README.md  pyproject.toml
integrations/refresh-executor/src/refresh_executor/: __init__.py  cli.py  core.py  llm.py  report.py  web.py
integrations/refresh-executor/tests/: conftest.py  test_cli.py  test_core.py  test_llm.py  test_web.py
src/obsidian_full_mcp/: __init__.py  __main__.py  config.py  server.py
src/obsidian_full_mcp/domain/: results.py  vault_path.py
src/obsidian_full_mcp/frontmatter/: __init__.py  parser.py  yaml_safety.py
src/obsidian_full_mcp/fs/: listing.py  reader.py  snapshot.py  writer.py
src/obsidian_full_mcp/rest/: client.py  detector.py
src/obsidian_full_mcp/security/: audit_logger.py  confirm.py
src/obsidian_full_mcp/tools/: _base.py  destructive.py  frontmatter.py  meta.py  read.py  search.py  wikilink.py  write.py
src/obsidian_full_mcp/validation/: builtin_hooks.py  config_loader.py  hooks.py
src/obsidian_hardened_mcp/: __init__.py  __main__.py  config.py  server.py
src/obsidian_hardened_mcp/domain/: audit.py  refresh.py  results.py  vault_path.py
src/obsidian_hardened_mcp/frontmatter/: __init__.py  parser.py  yaml_safety.py
src/obsidian_hardened_mcp/fs/: listing.py  pruner.py  reader.py  snapshot.py  writer.py
src/obsidian_hardened_mcp/security/: audit_logger.py  confirm.py
src/obsidian_hardened_mcp/tools/: _base.py  destructive.py  frontmatter.py  meta.py  read.py  refresh.py  search.py  wikilink.py  write.py
src/obsidian_hardened_mcp/validation/: builtin_hooks.py  config_loader.py  hooks.py
src/obsidian_power_mcp/: __main__.py  config.py  server.py
src/obsidian_power_mcp/domain/: audit.py  results.py  vault_path.py
src/obsidian_power_mcp/frontmatter/: __init__.py  parser.py  yaml_safety.py
tests/: conftest.py
tests/e2e/: README.md  audit_inspector.py  mcp_harness.py  run_e2e.py  seed_vault.py
tests/integration/: test_main.py  test_server.py  test_server_elicit.py  test_server_refresh.py
tests/security/: test_round_trip_golden.py  test_vault_path.py
tests/unit/: test_audit_logger.py  test_builtin_hooks.py  test_config.py  test_confirm_registry.py  test_domain_refresh.py  test_frontmatter_parser.py  test_frontmatter_write_safety.py  test_fs_pruner.py  test_fs_reader.py  test_fs_snapshot.py  test_fs_writer.py  test_m4_review_fixes.py  test_refresh_tasks_config.py  test_rest_client.py  test_rest_detector.py  test_tools_base.py  test_tools_destructive.py  test_tools_destructive_move.py  test_tools_destructive_rename.py  test_tools_execute_command.py  test_tools_frontmatter.py  test_tools_frontmatter_ops.py  test_tools_meta.py  test_tools_read.py  test_tools_refresh.py  test_tools_refresh_apply.py  test_tools_search.py  test_tools_wikilink.py  test_tools_write.py  test_validation_config.py  test_validation_hooks.py  test_validation_wired.py
(+32 files in other folders)
