[project]
name = "obsidian-hardened-mcp"
version = "0.3.0"
description = "Secure MCP server for Obsidian vaults — full file modification, atomic frontmatter ops, hardened path sandbox"
readme = "README.md"
authors = [
    { name = "Patrice Bour", email = "patrice.bour.71@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["obsidian", "mcp", "model-context-protocol", "vault", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.21",
    "anyio>=4.3",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/patrice-bour/obsidian-hardened-mcp"
Repository = "https://github.com/patrice-bour/obsidian-hardened-mcp"
Issues = "https://github.com/patrice-bour/obsidian-hardened-mcp/issues"

[project.scripts]
obsidian-hardened-mcp = "obsidian_hardened_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "security: critical security tests",
    "integration: integration tests requiring real fs",
    "slow: tests > 1s",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["obsidian_hardened_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures/vaults"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "S",
    "UP",
    "N",
    "RUF",
    "PTH",
    "SIM",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PTH"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["ruamel.*", "jsonschema.*"]
ignore_missing_imports = true
